--- a/.github/workflows/build-ocp.yml
+++ b/.github/workflows/build-ocp.yml
@@ -129,11 +129,16 @@ jobs:
 
       - name: Download wheel artifact
         if: ${{ matrix.python-version }} == '3.13' && matrix.use-vtk == 'vtk' && steps.cache-vtk-restore.outputs.cache-hit != 'true'
-        uses: actions/download-artifact@v4
-        with:
-          name: cadquery-vtk-${{ matrix.os }}-cp3.13
-          github-token: ${{ secrets.GH_PAT }}
-          run-id: ${{ env.PY313VTK_RUNID }}
+        run: |
+          if [[ ${{ matrix.os }} == "macos-14" ]]; then
+            curl -O https://github.com/CadQuery/ocp-build-system/releases/download/v${{ env.OCP }}-dev/cadquery_vtk-${{ env.VTK }}-cp313-cp313-macosx_11_0_arm64.whl
+          elif [[ ${{ matrix.os }} == "macos-13" ]]; then
+            curl -O https://github.com/CadQuery/ocp-build-system/releases/download/v7.8.1.0-dev/cadquery_vtk-9.3.1-cp313-cp313-macosx_11_0_x86_64.whl
+          elif [[ ${{ matrix.os }} == "ubuntu-20.04" ]]; then
+            curl -O https://github.com/CadQuery/ocp-build-system/releases/download/v7.8.1.0-dev/cadquery_vtk-9.3.1-cp313-cp313-linux_x86_64.whl
+          else 
+            curl -O https://github.com/CadQuery/ocp-build-system/releases/download/v7.8.1.0-dev/cadquery_vtk-9.3.1-cp313-cp313-win_amd64.whl
+          fi
 
       - name: (All) Install VTK SDK include files
         if: matrix.use-vtk == 'vtk' && steps.cache-vtk-restore.outputs.cache-hit != 'true'
