--- a/.github/workflows/build-ocp.yml
+++ b/.github/workflows/build-ocp.yml
@@ -476,7 +476,7 @@ jobs:
           key: OCP-source-${{ env.OCP }}-vtk-${{ matrix.os }}-
 
       - name: (All) Set up Python ${{ matrix.python-version }} via micromamba
-        if: steps.cache-ocp-source-restore.outputs.cache-hit != 'true'
+        if: env.PYWRAP == 'true' && steps.cache-ocp-source-restore.outputs.cache-hit != 'true'
         uses: mamba-org/setup-micromamba@v1
         with:
           environment-file: environment-${{ matrix.python-version }}.yml
@@ -485,7 +485,7 @@ jobs:
           cache-downloads: true
 
       - name: Get number of CPUs
-        if: steps.cache-ocp-source-restore.outputs.cache-hit != 'true'
+        if: env.PYWRAP == 'true' && steps.cache-ocp-source-restore.outputs.cache-hit != 'true'
         shell: bash -l {0}
         id: cpu-count
         run: |
@@ -496,7 +496,7 @@ jobs:
           echo "=> Using $cpu_count CPUs"
 
       - name: (Mac) Install MacOS SDK
-        if: runner.os == 'macOS' && steps.cache-ocp-source-restore.outputs.cache-hit != 'true'
+        if: env.PYWRAP == 'true' && runner.os == 'macOS' && steps.cache-ocp-source-restore.outputs.cache-hit != 'true'
         shell: bash -l {0}
         run: |
           set -euo pipefail
@@ -952,11 +952,11 @@ jobs:
             ./OCP/build/${{ matrix.module }}
           key: ${{ steps.cache-ocp-restore.outputs.cache-primary-key }}
 
-      - name: Debug Upload module
-        uses: actions/upload-artifact@v4
-        with:
-          name: debug_module_${{ matrix.os }}-py_${{ matrix.python-version }}
-          path: ./OCP/build/${{ matrix.module }}
+      # - name: Debug Upload module
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: debug_module_${{ matrix.os }}-py_${{ matrix.python-version }}
+      #     path: ./OCP/build/${{ matrix.module }}
 
       # ========================================
       #               OCP wheel
@@ -1150,12 +1150,27 @@ jobs:
           pip install pytest docutils ipython
 
       - name: Download wheel artifact
-        if: ${{ matrix.python-version }} == '3.13' && matrix.use-vtk == 'vtk' && steps.cache-vtk-restore.outputs.cache-hit != 'true'
-        uses: actions/download-artifact@v4
-        with:
-          name: cadquery-vtk-${{ matrix.os }}-cp3.13
-          github-token: ${{ secrets.GH_PAT }}
-          run-id: ${{ env.PY313VTK_RUNID }}
+        if: matrix.python-version == '3.13' && matrix.use-vtk == 'vtk' && steps.cache-vtk-restore.outputs.cache-hit != 'true'
+        shell: bash -l {0}
+        run: |
+          if [[ "${{ matrix.os }}" == "macos-14" ]]; then
+            echo "Downloading cadquery_vtk-${{ env.VTK }}-cp313-cp313-macosx_11_0_arm64.whl"
+            curl -L -O https://github.com/CadQuery/ocp-build-system/releases/download/v${{ env.OCP }}-dev/cadquery_vtk-${{ env.VTK }}-cp313-cp313-macosx_11_0_arm64.whl
+
+          elif [[ "${{ matrix.os }}" == "macos-13" ]]; then
+            echo "Downloading cadquery_vtk-9.3.1-cp313-cp313-macosx_11_0_x86_64.whl"
+            curl -L -O https://github.com/CadQuery/ocp-build-system/releases/download/v7.8.1.0-dev/cadquery_vtk-9.3.1-cp313-cp313-macosx_11_0_x86_64.whl
+
+          elif [[ "${{ matrix.os }}" == "ubuntu-20.04" ]]; then
+            echo "Downloading cadquery_vtk-9.3.1-cp313-cp313-linux_x86_64.whl"
+            curl -L -O https://github.com/CadQuery/ocp-build-system/releases/download/v7.8.1.0-dev/cadquery_vtk-9.3.1-cp313-cp313-linux_x86_64.whl
+
+          else 
+            echo "Downloading cadquery_vtk-9.3.1-cp313-cp313-win_amd64.whl"
+            curl -L -O https://github.com/CadQuery/ocp-build-system/releases/download/v7.8.1.0-dev/cadquery_vtk-9.3.1-cp313-cp313-win_amd64.whl
+
+          fi
+          ls -l
 
       - name: Install VTK and OCP wheel
         shell: bash -l {0}
