--- a/.github/workflows/build-ocp.yml
+++ b/.github/workflows/build-ocp.yml
@@ -33,28 +33,28 @@ jobs:
         use-vtk: ["vtk"]
         # use-vtk: ["vtk", "novtk"]
 
-        include:
-          - os: "macos-13"
-            vtk_libs: ".dylibs/libvtk*.dylib"
-            vtk_suffix: "/"
-            vtk_prefix: ""
-            sed_i: "gsed -i"
-            env: "MACOSX_DEPLOYMENT_TARGET=11.1"
-            shells: "bash"
-          - os: "macos-14"
-            vtk_libs: ".dylibs/libvtk*.dylib"
-            vtk_suffix: "/"
-            vtk_prefix: ""
-            sed_i: "gsed -i"
-            env: "MACOSX_DEPLOYMENT_TARGET=11.1"
-            shells: "bash"
-          - os: "ubuntu-20.04"
-            vtk_libs: "libvtk*.so"
-            vtk_suffix: "/vtk-9.3/"
-            vtk_prefix: ""
-            sed_i: "sed -i"
-            env: "DUMMY=0"
-            shells: "bash"
+        # include:
+        #   - os: "macos-13"
+        #     vtk_libs: ".dylibs/libvtk*.dylib"
+        #     vtk_suffix: "/"
+        #     vtk_prefix: ""
+        #     sed_i: "gsed -i"
+        #     env: "MACOSX_DEPLOYMENT_TARGET=11.1"
+        #     shells: "bash"
+        #   - os: "macos-14"
+        #     vtk_libs: ".dylibs/libvtk*.dylib"
+        #     vtk_suffix: "/"
+        #     vtk_prefix: ""
+        #     sed_i: "gsed -i"
+        #     env: "MACOSX_DEPLOYMENT_TARGET=11.1"
+        #     shells: "bash"
+        #   - os: "ubuntu-20.04"
+        #     vtk_libs: "libvtk*.so"
+        #     vtk_suffix: "/vtk-9.3/"
+        #     vtk_prefix: ""
+        #     sed_i: "sed -i"
+        #     env: "DUMMY=0"
+        #     shells: "bash"
           - os: "windows-2019"
             vtk_libs: "vtk*.dll"
             vtk_suffix: "/"
@@ -448,22 +448,23 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ["macos-13", "macos-14", "ubuntu-20.04", "windows-2019"]
+        os: ["windows-2019"]
+        # os: ["macos-13", "macos-14", "ubuntu-20.04", "windows-2019"]
         python-version: ["3.11"]
 
         include:
-          - os: "macos-13"
-            sed_i: "gsed -i"
-            env: "MACOSX_DEPLOYMENT_TARGET=11.1"
-            shells: "bash"
-          - os: "macos-14"
-            sed_i: "gsed -i"
-            env: "MACOSX_DEPLOYMENT_TARGET=11.1"
-            shells: "bash"
-          - os: "ubuntu-20.04"
-            sed_i: "sed -i"
-            env: "DUMMY=0"
-            shells: "bash"
+          # - os: "macos-13"
+          #   sed_i: "gsed -i"
+          #   env: "MACOSX_DEPLOYMENT_TARGET=11.1"
+          #   shells: "bash"
+          # - os: "macos-14"
+          #   sed_i: "gsed -i"
+          #   env: "MACOSX_DEPLOYMENT_TARGET=11.1"
+          #   shells: "bash"
+          # - os: "ubuntu-20.04"
+          #   sed_i: "sed -i"
+          #   env: "DUMMY=0"
+          #   shells: "bash"
           - os: "windows-2019"
             sed_i: "sed -i"
             shells: "bash cmd.exe"
@@ -673,9 +674,12 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ["macos-13", "macos-14", "ubuntu-20.04", "windows-2019"]
-        python-version: ["3.10", "3.11", "3.12", "3.13"]
-        use-vtk: ["vtk", "novtk"]
+        os: "windows-2019"]
+        python-version: ["3.11"]
+        use-vtk: ["vtk"]
+        # os: ["macos-13", "macos-14", "ubuntu-20.04", "windows-2019"]
+        # python-version: ["3.10", "3.11", "3.12", "3.13"]
+        # use-vtk: ["vtk", "novtk"]
 
         include:
           - os: "macos-13"
