--- a/.github/workflows/build-ocp.yml
+++ b/.github/workflows/build-ocp.yml
@@ -26,35 +26,32 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ["windows-2019"]
-        # os: ["macos-13", "macos-14", "ubuntu-20.04", "windows-2019"]
-        python-version: ["3.11"]
-        # python-version: ["3.10", "3.11", "3.12", "3.13"]
-        use-vtk: ["vtk"]
-        # use-vtk: ["vtk", "novtk"]
+        os: ["macos-13", "macos-14", "ubuntu-20.04", "windows-2019"]
+        python-version: ["3.10", "3.11", "3.12", "3.13"]
+        use-vtk: ["vtk", "novtk"]
 
         include:
-        #   - os: "macos-13"
-        #     vtk_libs: ".dylibs/libvtk*.dylib"
-        #     vtk_suffix: "/"
-        #     vtk_prefix: ""
-        #     sed_i: "gsed -i"
-        #     env: "MACOSX_DEPLOYMENT_TARGET=11.1"
-        #     shells: "bash"
-        #   - os: "macos-14"
-        #     vtk_libs: ".dylibs/libvtk*.dylib"
-        #     vtk_suffix: "/"
-        #     vtk_prefix: ""
-        #     sed_i: "gsed -i"
-        #     env: "MACOSX_DEPLOYMENT_TARGET=11.1"
-        #     shells: "bash"
-        #   - os: "ubuntu-20.04"
-        #     vtk_libs: "libvtk*.so"
-        #     vtk_suffix: "/vtk-9.3/"
-        #     vtk_prefix: ""
-        #     sed_i: "sed -i"
-        #     env: "DUMMY=0"
-        #     shells: "bash"
+          - os: "macos-13"
+            vtk_libs: ".dylibs/libvtk*.dylib"
+            vtk_suffix: "/"
+            vtk_prefix: ""
+            sed_i: "gsed -i"
+            env: "MACOSX_DEPLOYMENT_TARGET=11.1"
+            shells: "bash"
+          - os: "macos-14"
+            vtk_libs: ".dylibs/libvtk*.dylib"
+            vtk_suffix: "/"
+            vtk_prefix: ""
+            sed_i: "gsed -i"
+            env: "MACOSX_DEPLOYMENT_TARGET=11.1"
+            shells: "bash"
+          - os: "ubuntu-20.04"
+            vtk_libs: "libvtk*.so"
+            vtk_suffix: "/vtk-9.3/"
+            vtk_prefix: ""
+            sed_i: "sed -i"
+            env: "DUMMY=0"
+            shells: "bash"
           - os: "windows-2019"
             vtk_libs: "vtk*.dll"
             vtk_suffix: "/"
@@ -448,23 +445,22 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ["windows-2019"]
-        # os: ["macos-13", "macos-14", "ubuntu-20.04", "windows-2019"]
+        os: ["macos-13", "macos-14", "ubuntu-20.04", "windows-2019"]
         python-version: ["3.11"]
 
         include:
-          # - os: "macos-13"
-          #   sed_i: "gsed -i"
-          #   env: "MACOSX_DEPLOYMENT_TARGET=11.1"
-          #   shells: "bash"
-          # - os: "macos-14"
-          #   sed_i: "gsed -i"
-          #   env: "MACOSX_DEPLOYMENT_TARGET=11.1"
-          #   shells: "bash"
-          # - os: "ubuntu-20.04"
-          #   sed_i: "sed -i"
-          #   env: "DUMMY=0"
-          #   shells: "bash"
+          - os: "macos-13"
+            sed_i: "gsed -i"
+            env: "MACOSX_DEPLOYMENT_TARGET=11.1"
+            shells: "bash"
+          - os: "macos-14"
+            sed_i: "gsed -i"
+            env: "MACOSX_DEPLOYMENT_TARGET=11.1"
+            shells: "bash"
+          - os: "ubuntu-20.04"
+            sed_i: "sed -i"
+            env: "DUMMY=0"
+            shells: "bash"
           - os: "windows-2019"
             sed_i: "sed -i"
             shells: "bash cmd.exe"
@@ -674,36 +670,33 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ["windows-2019"]
-        python-version: ["3.11"]
-        use-vtk: ["vtk"]
-        # os: ["macos-13", "macos-14", "ubuntu-20.04", "windows-2019"]
-        # python-version: ["3.10", "3.11", "3.12", "3.13"]
-        # use-vtk: ["vtk", "novtk"]
+        os: ["macos-13", "macos-14", "ubuntu-20.04", "windows-2019"]
+        python-version: ["3.10", "3.11", "3.12", "3.13"]
+        use-vtk: ["vtk", "novtk"]
 
         include:
-          # - os: "macos-13"
-          #   delocate: delocate
-          #   plat: macosx_11_1_x86_64
-          #   sed_i: "gsed -i"
-          #   module: "OCP.*.so"
-          #   env: "MACOSX_DEPLOYMENT_TARGET=11.1"
-          #   shells: "bash"
-          # - os: "macos-14"
-          #   delocate: delocate
-          #   plat: macosx_11_1_arm64
-          #   sed_i: "gsed -i"
-          #   module: "OCP.*.so"
-          #   env: "MACOSX_DEPLOYMENT_TARGET=11.1"
-          #   shells: "bash"
-          # - os: "ubuntu-20.04"
-          #   delocate: auditwheel patchelf
-          #   plat: manylinux_2_31_x86_64
-          #   sed_i: "sed -i"
-          #   compilers: ""
-          #   module: "OCP.*.so"
-          #   env: "DUMMY=0"
-          #   shells: "bash"
+          - os: "macos-13"
+            delocate: delocate
+            plat: macosx_11_1_x86_64
+            sed_i: "gsed -i"
+            module: "OCP.*.so"
+            env: "MACOSX_DEPLOYMENT_TARGET=11.1"
+            shells: "bash"
+          - os: "macos-14"
+            delocate: delocate
+            plat: macosx_11_1_arm64
+            sed_i: "gsed -i"
+            module: "OCP.*.so"
+            env: "MACOSX_DEPLOYMENT_TARGET=11.1"
+            shells: "bash"
+          - os: "ubuntu-20.04"
+            delocate: auditwheel patchelf
+            plat: manylinux_2_31_x86_64
+            sed_i: "sed -i"
+            compilers: ""
+            module: "OCP.*.so"
+            env: "DUMMY=0"
+            shells: "bash"
           - os: "windows-2019"
             delocate: delvewheel
             plat: win_amd64
