--- a/.github/workflows/build-ocp.yml
+++ b/.github/workflows/build-ocp.yml
@@ -473,7 +473,6 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: (All) Restore OCP source cache
-        if: env.PYWRAP == 'true'
         id: cache-ocp-source-restore
         uses: actions/cache/restore@v4
         with:
@@ -481,7 +480,7 @@ jobs:
             ./OCP
           key: OCP-source-${{ env.OCP }}-vtk-${{ matrix.os }}-
 
-      - name: (All) Set up Python ${{ matrix.python-version }} via micromamba
+      - name: (All) Set up Python ${{ matrix.python-version }} via micromamba [PYWRAP=true]
         if: env.PYWRAP == 'true' && steps.cache-ocp-source-restore.outputs.cache-hit != 'true'
         uses: mamba-org/setup-micromamba@v1
         with:
@@ -490,7 +489,7 @@ jobs:
           init-shell: ${{ matrix.shells }}
           cache-downloads: true
 
-      - name: Get number of CPUs
+      - name: Get number of CPUs [PYWRAP=true]
         if: env.PYWRAP == 'true' && steps.cache-ocp-source-restore.outputs.cache-hit != 'true'
         shell: bash -l {0}
         id: cpu-count
@@ -501,7 +500,7 @@ jobs:
           echo "cpu_count=$cpu_count" >> $GITHUB_OUTPUT
           echo "=> Using $cpu_count CPUs"
 
-      - name: (Mac) Install MacOS SDK
+      - name: (Mac) Install MacOS SDK [PYWRAP=true]
         if: env.PYWRAP == 'true' && runner.os == 'macOS' && steps.cache-ocp-source-restore.outputs.cache-hit != 'true'
         shell: bash -l {0}
         run: |
@@ -520,7 +519,7 @@ jobs:
       # Restore SDKs
       # - - - - - - - - - - - - - - - - - - - - -
 
-      - name: (All) Restore VTK SDK cache
+      - name: (All) Restore VTK SDK cache [PYWRAP=true]
         if: env.PYWRAP == 'true' && steps.cache-ocp-source-restore.outputs.cache-hit != 'true'
         id: cache-vtk-restore
         uses: actions/cache/restore@v4
@@ -529,7 +528,7 @@ jobs:
             ~/opt/local/vtk-${{ env.VTK }}
           key: VTK-${{ env.VTK }}-py-${{ matrix.python-version }}-${{ matrix.os }}-
 
-      - name: (All) Restore OCCT SDK cache
+      - name: (All) Restore OCCT SDK cache [PYWRAP=true]
         if: env.PYWRAP == 'true' && steps.cache-ocp-source-restore.outputs.cache-hit != 'true'
         id: cache-occt-restore
         uses: actions/cache/restore@v4
