--- a/.github/workflows/build-ocp.yml
+++ b/.github/workflows/build-ocp.yml
@@ -3,8 +3,8 @@ name: Build OCP with pypi VTK V2
 on: workflow_dispatch
 
 env:
-  OCP: 7.8.1.0
-  WHEEL: 7.8.1.0.post1
+  OCP: 7.8.1.1
+  WHEEL: 7.8.1.1
   VTK: 9.3.1
   VTK_MAJOR: 9.3
   OCCT: 7.8.1
