--- a/pypi/pyproject.toml
+++ b/pypi/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "cadquery-ocp"
-version = "7.8.1.0.post1"
+version = "7.8.1.1"
 description = "Unchanged OCP package, just pypi packaged"
 authors = [{ name = "Bernhard Walter", email = "b_walter@arcor.de" }]
 requires-python = ">=3.10"
