--- a/.github/workflows/build-ocp-stubs.yml
+++ b/.github/workflows/build-ocp-stubs.yml
@@ -28,7 +28,7 @@ jobs:
           init-shell: bash
           cache-downloads: true
 
-      - name: Download official OCP source [PYWRAP=false]
+      - name: Download official OCP source
         shell: bash -l {0}
         run: |
           set -euo pipefail
