--- a/.github/workflows/build-ocp.yml
+++ b/.github/workflows/build-ocp.yml
@@ -549,7 +549,8 @@ jobs:
             micromamba install -y logzero toml pandas joblib tqdm jinja2 toposort schema click py-lief=0.14.1 python-clang pyparsing
             pip install "pybind11==2.12.*" path  # cannot be installed with micromamba on Py3.12 and Py3.13
           else
-            pip install "pybind11==2.12.*" logzero toml pandas joblib path tqdm jinja2 toposort schema click lief==0.14.1 clang==15.0.7 pyparsing
+            micromamba install -y py-lief=0.14.1
+            pip install "pybind11==2.12.*" logzero toml pandas joblib path tqdm jinja2 toposort schema click clang==15.0.7 pyparsing
           fi
 
       - name: (All) Clone OCP [PYWRAP=true]
@@ -824,7 +825,8 @@ jobs:
             micromamba install -y logzero toml pandas joblib tqdm jinja2 toposort schema click py-lief=0.14.1 python-clang pyparsing
             pip install "pybind11==2.12.*" path  # cannot be installed with micromamba on Py3.12 and Py3.13
           else
-            pip install "pybind11==2.12.*" logzero toml pandas joblib path tqdm jinja2 toposort schema click lief==0.14.1 clang==15.0.7 pyparsing
+            micromamba install -y py-lief=0.14.1
+            pip install "pybind11==2.12.*" logzero toml pandas joblib path tqdm jinja2 toposort schema click clang==15.0.7 pyparsing
           fi
 
       - name: (Linux) Generate OCP build files and build OCP
