--- a/.github/workflows/build-ocp.yml
+++ b/.github/workflows/build-ocp.yml
@@ -9,6 +9,7 @@ env:
   VTK_MAJOR: 9.3
   OCCT: 7.8.1
   PYWRAP: false
+  VTK313_URL: https://github.com/CadQuery/ocp-build-system/releases/download/v7.8.1.0-dev
 
 jobs:
   # ========================================
@@ -130,19 +131,19 @@ jobs:
         run: |
           if [[ "${{ matrix.os }}" == "macos-14" ]]; then
             echo "Downloading cadquery_vtk-${{ env.VTK }}-cp313-cp313-macosx_11_0_arm64.whl"
-            curl -L -O https://github.com/CadQuery/ocp-build-system/releases/download/v7.8.1.0-dev/cadquery_vtk-${{ env.VTK }}-cp313-cp313-macosx_11_0_arm64.whl
+            curl -L -O ${{ env.VTK313_URL }}/cadquery_vtk-${{ env.VTK }}-cp313-cp313-macosx_11_0_arm64.whl
 
           elif [[ "${{ matrix.os }}" == "macos-13" ]]; then
             echo "Downloading cadquery_vtk-9.3.1-cp313-cp313-macosx_11_0_x86_64.whl"
-            curl -L -O https://github.com/CadQuery/ocp-build-system/releases/download/v7.8.1.0-dev/cadquery_vtk-9.3.1-cp313-cp313-macosx_11_0_x86_64.whl
+            curl -L -O ${{ env.VTK313_URL }}/cadquery_vtk-9.3.1-cp313-cp313-macosx_11_0_x86_64.whl
 
           elif [[ "${{ matrix.os }}" == "ubuntu-20.04" ]]; then
             echo "Downloading cadquery_vtk-9.3.1-cp313-cp313-linux_x86_64.whl"
-            curl -L -O https://github.com/CadQuery/ocp-build-system/releases/download/v7.8.1.0-dev/cadquery_vtk-9.3.1-cp313-cp313-linux_x86_64.whl
+            curl -L -O ${{ env.VTK313_URL }}/cadquery_vtk-9.3.1-cp313-cp313-linux_x86_64.whl
 
           else 
             echo "Downloading cadquery_vtk-9.3.1-cp313-cp313-win_amd64.whl"
-            curl -L -O https://github.com/CadQuery/ocp-build-system/releases/download/v7.8.1.0-dev/cadquery_vtk-9.3.1-cp313-cp313-win_amd64.whl
+            curl -L -O ${{ env.VTK313_URL }}/cadquery_vtk-9.3.1-cp313-cp313-win_amd64.whl
 
           fi
           ls -l
@@ -635,7 +636,7 @@ jobs:
           set -euo pipefail
 
           rm -fr OCP  # remove the cached sources again
-          
+
           if [[ ${{ matrix.os }} == "macos-13" || ${{ matrix.os }} == "macos-14" ]]; then
             curl -L -O https://github.com/CadQuery/OCP/releases/download/${{ env.OCP }}/OCP_src_stubs_macOS-latest.zip
           else
@@ -1172,19 +1173,19 @@ jobs:
         run: |
           if [[ "${{ matrix.os }}" == "macos-14" ]]; then
             echo "Downloading cadquery_vtk-${{ env.VTK }}-cp313-cp313-macosx_11_0_arm64.whl"
-            curl -L -O https://github.com/CadQuery/ocp-build-system/releases/download/v${{ env.OCP }}-dev/cadquery_vtk-${{ env.VTK }}-cp313-cp313-macosx_11_0_arm64.whl
+            curl -L -O ${{ env.VTK313_URL }}/cadquery_vtk-${{ env.VTK }}-cp313-cp313-macosx_11_0_arm64.whl
 
           elif [[ "${{ matrix.os }}" == "macos-13" ]]; then
             echo "Downloading cadquery_vtk-9.3.1-cp313-cp313-macosx_11_0_x86_64.whl"
-            curl -L -O https://github.com/CadQuery/ocp-build-system/releases/download/v${{ env.OCP }}-dev/cadquery_vtk-${{ env.VTK }}-cp313-cp313-macosx_11_0_x86_64.whl
+            curl -L -O ${{ env.VTK313_URL }}/cadquery_vtk-${{ env.VTK }}-cp313-cp313-macosx_11_0_x86_64.whl
 
           elif [[ "${{ matrix.os }}" == "ubuntu-20.04" ]]; then
             echo "Downloading cadquery_vtk-9.3.1-cp313-cp313-linux_x86_64.whl"
-            curl -L -O https://github.com/CadQuery/ocp-build-system/releases/download/v${{ env.OCP }}-dev/cadquery_vtk-${{ env.VTK }}-cp313-cp313-linux_x86_64.whl
+            curl -L -O ${{ env.VTK313_URL }}/cadquery_vtk-${{ env.VTK }}-cp313-cp313-linux_x86_64.whl
 
           else 
             echo "Downloading cadquery_vtk-9.3.1-cp313-cp313-win_amd64.whl"
-            curl -L -O https://github.com/CadQuery/ocp-build-system/releases/download/v${{ env.OCP }}-dev/cadquery_vtk-${{ env.VTK }}-cp313-cp313-win_amd64.whl
+            curl -L -O ${{ env.VTK313_URL }}/cadquery_vtk-${{ env.VTK }}-cp313-cp313-win_amd64.whl
 
           fi
           ls -l
