--- a/pypi/pyproject.toml
+++ b/pypi/pyproject.toml
@@ -9,6 +9,12 @@ description = "Unchanged OCP package, just pypi packaged"
 authors = [{ name = "Bernhard Walter", email = "b_walter@arcor.de" }]
 requires-python = ">=3.10"
 
+[project.optional-dependencies]
+# development dependencies
+development = [
+    "cadquery-ocp-stubs >= 7.8, < 7.9",
+]
+
 [tool.setuptools]
 include-package-data = true
 
