--- a/pypi/pyproject.toml
+++ b/pypi/pyproject.toml
@@ -5,9 +5,10 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "cadquery-ocp"
 version = "7.8.1.1"
-description = "Unchanged OCP package, just pypi packaged"
+description = "Python wrapper for OCCT generated using pywrap."
 authors = [{ name = "Bernhard Walter", email = "b_walter@arcor.de" }]
 requires-python = ">=3.10"
+readme = "README.md"
 
 [tool.setuptools]
 include-package-data = true
