--- a/pypi-stubs/pyproject.toml
+++ b/pypi-stubs/pyproject.toml
@@ -5,9 +5,10 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "cadquery-ocp-stubs"
 version = "7.8.1.1"
-description = "API stubs for cadquery-ocp"
+description = "Typing stubs for cadquery-ocp automaticaly generated using pybind11-stubgen."
 authors = [{ name = "Bernhard Walter", email = "b_walter@arcor.de" }]
 requires-python = ">=3.10"
+readme = "README.md"
 
 [tool.setuptools]
 package-dir = {"cadquery_ocp_stubs" = "OCP-stubs"}
