--- a/pypi-stubs/pyproject.toml
+++ b/pypi-stubs/pyproject.toml
@@ -4,10 +4,10 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "cadquery-ocp-stubs"
-version = "7.8.1.1"
-description = "Typing stubs for cadquery-ocp automaticaly generated using pybind11-stubgen."
-authors = [{ name = "Bernhard Walter", email = "b_walter@arcor.de" }]
-requires-python = ">=3.10"
+version = "7.8.1.1.post1"
+description = "Typing stubs for cadquery-ocp based on the official CadQuery/OCP sources"
+authors = [{ name = "Bernhard Walter" }]
+requires-python = ">=3.10,<3.14"
 readme = "README.md"
 
 [tool.setuptools]
