--- a/.github/workflows/build-ocp.yml
+++ b/.github/workflows/build-ocp.yml
@@ -106,6 +106,7 @@ jobs:
         shell: bash -l {0}
         run: |
           # do not use freeimage freetype fontconfig from anaconda. Prevents from manylinux_2_31_x86_64 wheel
+          sudo apt-get update
           sudo apt-get install -y mesa-common-dev libegl1-mesa-dev libgl1-mesa-dev \
                                   libglu1-mesa-dev freeglut3-dev libxcursor-dev \
                                   libfreeimage-dev libfreetype-dev libfontconfig-dev
@@ -732,6 +733,7 @@ jobs:
         if: runner.os == 'Linux'
         shell: bash -l {0}
         run: |
+          sudo apt-get update
           # do not use freeimage freetype fontconfig from anaconda. Prevents from manylinux_2_31_x86_64 wheel
           sudo apt-get install -y mesa-common-dev libegl1-mesa-dev libgl1-mesa-dev \
                                   libglu1-mesa-dev freeglut3-dev libxcursor-dev \
