--- a/pypi/pyproject.toml
+++ b/pypi/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "cadquery-ocp"
-version = "7.8.1.1.post2"
+version = "7.8.1.2"
 description = "Python wrapper for Open CASCADE Technology 3D geometry library based on the official CadQuery/OCP sources"
 authors = [{ name = "Bernhard Walter" }]
 requires-python = ">=3.10,<3.14"
