--- a/.github/workflows/build-vtk.yml
+++ b/.github/workflows/build-vtk.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: ["ubuntu-20.04", "macos-13", "macos-14", "windows-2019"]
+        os: ["ubuntu-20.04", "macos-13", "macos-14", "windows-2019", "ubuntu-22.04-arm"]
         python-version: ["3.13"]
         include:
           - os: "macos-13"
@@ -25,6 +25,9 @@ jobs:
             sed_i: "sed -i '.bak'"
             shells: "bash"
           - os: "ubuntu-20.04"
+            sed_i: "sed -i"
+            shells: "bash"
+          - os: "ubuntu-22.04-arm"
             sed_i: "sed -i"
             shells: "bash"
           - os: "windows-2019"
